--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .width-4 {
+    width: 4rem !important;
+  }
+
+  .width-small-2 {
+    width: 2.4rem !important;
+  }
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
