--- a/src/app/index.css
+++ b/src/app/index.css
@@ -14,3 +14,8 @@
   min-height: 44px !important;
   background-color: #f5f5f5 !important;
 }
+
+.supportedLanguages .css-1dyz3mf {
+  height: 44px;
+  overflow-y: auto;
+}
